Bug 435926 - My paint brushes have large thumbnail preview on hover [git 6410188]
Summary: My paint brushes have large thumbnail preview on hover [git 6410188]
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-19 17:30 UTC by Raghavendra kamath
Modified: 2021-04-20 09:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Attachment showing the large brush preview of a mypaint brush. (232.06 KB, image/png)
2021-04-19 17:30 UTC, Raghavendra kamath
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2021-04-19 17:30:32 UTC
Created attachment 137709 [details]
Attachment showing the large brush preview of a mypaint brush.

SUMMARY
The new Mypaint brushes have bigger brush icons by design. This is nice, but it has resulted in large brush icon preview on hover. These are twice or thrice as large as regular brush icon preview.

STEPS TO REPRODUCE
1. Download Krita nightly AppImage and open a new document.
2. Go to the brush preset docker. 
3. type "marker" to filter common brushes of both normal and mypaint brush.
4. Hover your mouse over "e) Marker Dry" and "e) Marker Medium (mypaint)".

OBSERVED RESULT
Mypaint brush has larger icon preview on hover

EXPECTED RESULT
All icon previews should be of same size and consistent
Comment 1 Halla Rempt 2021-04-20 09:44:28 UTC
Git commit 38fa298a682f852f5c29b3a9fa8f045d10729064 by Halla Rempt.
Committed on 20/04/2021 at 09:44.
Pushed by rempt into branch 'master'.

Set a maximum tooltip size for paintoppresets

M  +3    -0    libs/resourcewidgets/KisResourceItemChooser.cpp

https://invent.kde.org/graphics/krita/commit/38fa298a682f852f5c29b3a9fa8f045d10729064