Set a maximum tooltip size for paintoppresets

BUG:435926